@@ -30,6 +30,7 @@ Other features
  * Added error notification when running the ``wagtail`` command on Python <3.4 (Matt Westcott)
  * ``update_index`` management command now accepts a ``--chunk_size`` option to determine the number of items to load at once (Dave Bell)
  * Added hook `register_account_menu_item` to add new account preference items (Michael van Tellingen)
+ * Added change email functionality from the account settings (Alejandro Garza, Alexs Mathilda)
 
 Bug fixes
 ~~~~~~~~~
