@@ -44,6 +44,7 @@ urlpatterns = [
 
     url(r'^account/$', account.account, name='wagtailadmin_account'),
     url(r'^account/change_password/$', account.change_password, name='wagtailadmin_account_change_password'),
+    url(r'^account/change_email/$', account.change_email, name='wagtailadmin_account_change_email'),
     url(
         r'^account/notification_preferences/$',
         account.notification_preferences,
